# ebanglalibrary-to-epub

./: .gitignore  API_README.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  scrape.py
apis/: app.py
apis/epub/92d63417-207d-4859-b52f-44fb14b551bc/: দ্য ডিভোশন অব সাসপেক্ট এক্স.epub
controller/: __init__.py  scraper.py
static/: index.html  script.js  style.css
